--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title>index</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css">
+<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css"-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+<link rel="stylesheet" href="pages/style.css">
 </head>
 
 <body>
-<main>
-  <h1>まとめ</h1>
-  <a href="pages/multiset.html"><button>multiset</button></a>
-</main>
+  <header>
+    <span><i class="fas fa-cannabis fa-fw my-cannabisd"></i>CP</span>
+    <a class="link-github" href="https://github.com/ymtz03/CompetitiveProgramming/tree/master">Github</a>
+  </header>
+  
+  <main>
+    <div class="content-wrapper">
+      <h3>ライブラリ</h3>
+      <a href="pages/multiset.html"><button>multiset</button></a>
+    </div>
+    
+    <div class="content-wrapper">
+      <h3>データ構造</h3>
+      <ul>
+        <li>Stack</li>
+        <li>Queue</li>
+        <li>Max Queue</li>
+      </ul>
+    </div>
+  </main>
+
+  <footer>
+    <span>Welcome to CP!</span>
+  </footer>
 
 <script>
 console.log('GitHub Pages Sample');
